# SFMLQuickFire

./: CMakeLists.txt  README.md  main.cpp
Setup/: cameraSetup.h  setupManager.h
Shader_Template/: CMakeLists.txt  shader.cpp  shader.h
Shaders/: examplefrag.frag  examplevert.vert  rect.frag  rect.vert
Shape_Template/: CMakeLists.txt  rectangle.cpp  rectangle.h
Texture_Template/: CMakeLists.txt  texture.cpp  texture.h
